--- a/patches/client-participation/js/templates/footer.handlebars
+++ b/patches/client-participation/js/templates/footer.handlebars
@@ -8,8 +8,9 @@ should have received a copy of the GNU Affero General Public License along with 
 <footer class="css-mxl0c">
     <div class="css-1oqccy5">
         <div class="css-1l5tfyw">
-            <h3>{{s.footer_whatis}}</h3>
+            <h3>{{s.footer_title}}</h3>
             <p>{{s.footer_desc}}</p>
+            <p style="font-size: 10px;">{{s.footer_version}}: 0.1.10   {{s.footer_released}}: 16.1.2024</p>
         </div>
         <div class="css-1236x0c">
             <ul class="css-u7hqrd">
@@ -26,7 +27,7 @@ should have received a copy of the GNU Affero General Public License along with 
                         Democracy Project 🡥</a>
                 </li>
                 <li class="css-eaeacs">
-                    <a target="_blank" href="https://github.com/compdemocracy/polis"
+                    <a target="_blank" href="https://github.com/polis-digifinland/polis-digifinland"
                         class="css-121oj52">{{s.footer_links_source}} 🡥</a>
                 </li>
             </ul>
