Added disclaimer to footer

--- a/patches/client-participation/js/templates/footer.handlebars
+++ b/patches/client-participation/js/templates/footer.handlebars
@@ -10,6 +10,7 @@ should have received a copy of the GNU Affero General Public License along with 
         <div class="css-1l5tfyw">
             <h3>{{s.footer_title}}</h3>
             <p>{{s.footer_desc}}</p>
+            <p>{{s.footer_disclaimer}}</p>
             <p style="font-size: 10px;">{{s.footer_version}}: 0.1.10   {{s.footer_released}}: 16.1.2024</p>
         </div>
         <div class="css-1236x0c">
