Participation footer CSS fix

--- a/patches/client-participation/css/polis/modules/_footer.scss
+++ b/patches/client-participation/css/polis/modules/_footer.scss
@@ -5,6 +5,7 @@
     left: 0px;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
+    width: 100%;
 }
 .css-1oqccy5 {
     box-sizing: border-box;
