--- a/patches/client-participation/public/index.ejs
+++ b/patches/client-participation/public/index.ejs
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" translate="no">
+<html lang="fi" translate="no">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Polis</title>
     <meta name="google" value="notranslate">
+
+    <!-- Google tag (gtag.js) -->
+    <% if (gaTrackingId) { %>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=<%= gaTrackingId %>"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', '<%= gaTrackingId %>');
+      </script>
+    <% } %>
 
     <!-- REPLACE_THIS_WITH_FB_META_TAGS -->
 
@@ -260,19 +272,5 @@
         document.getElementsByTagName("body")[0].setAttribute("lang", ui_lang);
       }
     </script>
-
-    <% if (gaTrackingId) { %>
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', '<%= gaTrackingId %>', 'auto');
-        ga('require', 'displayfeatures');
-        ga('send', 'pageview');
-      </script>
-    <% } %>
-
 </body>
 </html>
